Add done 01. Import Users task

--- a/Entity Framework Core/Exercises/09. XML Processing/09. XML-Processing-Product-Shop-Skeleton/ProductShop/ProductShop.csproj
+++ b/Entity Framework Core/Exercises/09. XML Processing/09. XML-Processing-Product-Shop-Skeleton/ProductShop/ProductShop.csproj
@@ -20,4 +20,19 @@
     <PackageReference Include="Newtonsoft.Json" Version="10.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Datasets\categories-products.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Datasets\categories.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Datasets\products.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Datasets\users.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
